config/istio/mtls/peerauthentication.yaml
# Enforce STRICT mTLS for all services in the mesh
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: istio-system
spec:
  mtls:
    mode: PERMISSIVE
